<resources>
    <string name="app_name">SarnanoNeve</string>
    <string name="Piste">Piste</string>
    <string name="WebCam">WebCam</string>
    <string name="Impianti">Impianti</string>
    <string name="Noleggio_attrezzatura">Noleggio attrezzatura</string>
    <string name="InfoImpianti">Gli impianti sono aperti dalle 8:30 alle 16:30</string>
    <string name="sassotetto">Sassotetto</string>
    <string name="maddalena">Maddalena</string>
    <string name="Informazioni">Informazioni</string>
    <string name="Scuole_scii">Scuole scii</string>
    <string name="Parcheggio">Parcheggio</string>
    <string name="Profilo">Profilo</string>
    <string name="ImageText">Foto Profilo</string>
    <string name="Soccorso_piste">Soccorso piste</string>
    <string name="text_label_1_botBar">Home</string>
    <string name="text_label_2_botBar">Servizi</string>
    <string name="text_label_3_botBar">Eventi</string>
    <string name="text_label_4_botBar">Shop</string>
    <string name="text_label_5_botBar">Mappa</string>
    <string name="difficolta_1">Facile</string>
    <string name="difficolta_2">Media</string>
    <string name="difficolta_3">Difficile</string>
    <string name="Piste_aperte">N.di piste aperte oggi: </string>
    <string name="Impianti_aperti">N.di impianti aperti oggi: </string>
    <string name="title_activity_mappa">MappaActivity</string>
    <string name="URLwebcam">https://api.scenaridigitali.com/media/sassotetto/timelapse.mp4?d=20225217</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="titoloMeteo">Il METEO DI OGGI</string>


    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="immaginemeteo">ImmagineMeteo</string>
    <string name="meteo">Meteo</string>
    <string name="shop">Shop</string>
    <string name="i_nostri_skipass">I NOSTRI SKIPASS</string>
    <string name="prezzi">Prezzi</string>
    <string name="feriale">Feriale</string>
    <string name="festivo">Festivo</string>
    <string name="normale">Normale</string>
    <string name="ridotto">Ridotto</string>
    <string name="time_laps">TIME LAPS</string>
    <string name="web_cam_capannina">Web Cam Capannina</string>
    <string name="info_webcam">Questa è la meravigliosa vista che vi aspetta dall nostro rifugio La Capannina. SASSOTETTO(MC) 1420 M</string>
    <string name="capannina">Capannina</string>

</resources>