<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/ombre_home">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="204dp" />

        <TextView
            android:id="@+id/difficoltà_2"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/difficolta_2"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginEnd="20dp"
            android:scaleType="center"
            app:layout_constraintBottom_toBottomOf="@+id/difficoltà_2"
            app:layout_constraintEnd_toStartOf="@+id/difficoltà_2"
            app:layout_constraintTop_toTopOf="@+id/difficoltà_2"
            app:srcCompat="@drawable/pista_rossa" />

        <TextView
            android:id="@+id/difficoltà_1"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:text="@string/difficolta_1"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/difficoltà_2"
            app:layout_constraintEnd_toStartOf="@+id/difficoltà_2"
            app:layout_constraintHorizontal_bias="0.445"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/difficoltà_2" />

        <TextView
            android:id="@+id/difficoltà_3"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:text="@string/difficolta_3"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/difficoltà_2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.652"
            app:layout_constraintStart_toEndOf="@+id/difficoltà_2"
            app:layout_constraintTop_toTopOf="@+id/difficoltà_2" />

        <ImageView
            android:id="@+id/imageView7"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginEnd="16dp"
            android:scaleType="center"
            app:layout_constraintBottom_toBottomOf="@+id/difficoltà_3"
            app:layout_constraintEnd_toStartOf="@+id/difficoltà_3"
            app:layout_constraintTop_toTopOf="@+id/difficoltà_3"
            app:srcCompat="@drawable/pista_nera" />

        <ImageView
            android:id="@+id/imageView8"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginEnd="20dp"
            android:scaleType="center"
            app:layout_constraintBottom_toBottomOf="@+id/difficoltà_1"
            app:layout_constraintEnd_toStartOf="@+id/difficoltà_1"
            app:layout_constraintTop_toTopOf="@+id/difficoltà_1"
            app:srcCompat="@drawable/pista_blu" />

        <ScrollView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView6">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/nome_comprensorio1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginBottom="20dp"
                    android:textColor="@color/orange"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    >

                </TextView>

                <ListView
                    android:id="@+id/comprensorio1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    android:layout_marginBottom="20dp">

                </ListView>

                <TextView
                    android:id="@+id/nome_comprensorio2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginBottom="20dp"
                    android:textColor="@color/orange"
                    android:textSize="25sp"
                    android:textStyle="bold">

                </TextView>

                <ListView
                    android:id="@+id/comprensorio2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    android:layout_marginBottom="20dp">

                </ListView>

            </LinearLayout>


        </ScrollView>



    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>